<resources>
    <string name="app_name">Notes</string>
    <string name="activity_main_name">Notes</string>
    <string name="activity_main_nav_drawer_open">Open navigation drawer</string>
    <string name="activity_main_nav_drawer_close">Close navigation drawer</string>
    <string name="activity_main_nav_drawer_item_add_mock_entries">Add mock entries</string>
    <string name="activity_main_nav_drawer_item_delete_all_entries">Delete all</string>
    <string name="activity_main_nav_drawer_item_import_entries">Import notes</string>
    <string name="activity_main_nav_drawer_item_export_entries">Export notes</string>
    <string name="activity_main_nav_drawer_item_notes_list">Notes list</string>
    <string name="activity_main_nav_drawer_item_sync">Synchronization</string>
    <string name="activity_main_nav_drawer_item_change_user">Change user</string>
    <string name="activity_main_nav_drawer_item_settings">Settings</string>
    <string name="activity_main_nav_drawable_header_image_view_description">Notes</string>
    <string name="activity_main_notification_add_mock_entries_success">Mock entries added</string>
    <string name="activity_main_notification_add_mock_entries_failed">Mock entries adding failed</string>
    <string name="activity_main_notification_add_mock_entries_start">Mock entries adding…</string>
    <string name="activity_main_notification_add_mock_title">Add mock entries</string>
    <string name="activity_main_notification_add_mock_text">Add in progress</string>
    <string name="activity_main_notification_add_mock_finish">Add mock complete</string>
    <string name="activity_main_notification_add_mock_ok">Add</string>
    <string name="activity_main_notification_add_mock_cancel">Cancel</string>
    <string name="activity_main_notification_delete_all_entries_success">All entries deleted</string>
    <string name="activity_main_notification_delete_all_entries_failed">All entries deleting failed</string>
    <string name="fragment_color_picker_toast_edit_mode_on">Edit mode on</string>
    <string name="fragment_color_picker_toast_edit_mode_off">Edit mode off</string>
    <string name="fragment_color_picker_toast_favorite_color_added">Favorite color added</string>
    <string name="fragment_color_picker_ic_helper_swipe">Swipe to left or right</string>
    <string name="fragment_color_picker_ic_helper_touch">Single or double click</string>
    <string name="fragment_color_picker_ic_helper_move">Swipe in edit mode</string>
    <string name="fragment_color_picker_ic_helper_favorite">Add to favorite colors</string>
    <string name="fragment_color_picker_ic_done_description">Done</string>
    <string name="fragment_color_picker_ic_cancel_description">Cancel</string>
    <string name="fragment_item_details_pager_title_strip_prefix">Entry ID</string>
    <string name="fragment_item_details_title_add">Add</string>
    <string name="fragment_item_details_title_edit">Edit</string>
    <string name="fragment_item_details_text_view_title">Title</string>
    <string name="fragment_item_details_text_view_description">Description</string>
    <string name="fragment_item_details_image_url_text_view">Image URL</string>
    <string name="fragment_item_details_edit_mode_wrong_id">Entry with given id is not exists</string>
    <string name="fragment_item_details_toast_demonstrative_pause">Demonstrative pause</string>
    <string name="fragment_item_details_image_url_error">Invalid URL</string>
    <string name="fragment_item_details_image_view_description">Image from URL</string>
    <string name="fragment_item_details_image_view_error">Loading image from URL failed</string>
    <string name="fragment_item_details_info_dialog_title">Info</string>
    <string name="fragment_item_details_info_dialog_message_created">Created:</string>
    <string name="fragment_item_details_info_dialog_message_edited">Last edited:</string>
    <string name="fragment_item_details_info_dialog_message_viewed">Last viewed:</string>
    <string name="fragment_item_details_info_dialog_message_sync_id">Sync id:</string>
    <string name="fragment_item_details_info_dialog_button_ok">OK</string>
    <string name="fragment_item_details_delete_dialog_title">Delete</string>
    <string name="fragment_item_details_delete_dialog_message">Do you really want to delete this entry?</string>
    <string name="fragment_item_details_delete_dialog_button_ok">Delete</string>
    <string name="fragment_item_details_delete_dialog_button_cancel">Cancel</string>
    <string name="fragment_list_notification_found_text">Found:</string>
    <string name="fragment_list_notification_entry_added">Entry added</string>
    <string name="fragment_list_notification_entry_updated">Entry updated</string>
    <string name="fragment_list_notification_entry_deleted">Entry deleted</string>
    <string name="fragment_list_notification_filtered">Filtered</string>
    <string name="fragment_list_filter_dialog_date_text_default">---</string>
    <string name="fragment_list_filter_dialog_date_text_from">From</string>
    <string name="fragment_list_filter_dialog_date_text_to">To</string>
    <string name="fragment_list_filter_dialog_action_button_cancel_text">Cancel</string>
    <string name="fragment_list_filter_dialog_action_button_filter_text">Filter</string>
    <string name="fragment_list_filter_dialog_profiles_title_text">Profiles:</string>
    <string name="fragment_list_filter_dialog_sorting_by_title_text">Sorting by:</string>
    <string name="fragment_list_filter_dialog_filter_by_title_text">Filter by:</string>
    <string name="fragment_list_filter_dialog_color_by_title_text">Color:</string>
    <string name="fragment_list_filter_dialog_color_by_default_text">All colors</string>
    <string name="fragment_list_filter_dialog_filter_by_created_title_text">Created:</string>
    <string name="fragment_list_filter_dialog_filter_by_edited_title_text">Edited:</string>
    <string name="fragment_list_filter_dialog_filter_by_viewed_title_text">Viewed:</string>
    <string name="fragment_list_filter_dialog_profiles_save_current_button_text">Add current</string>
    <string name="fragment_list_filter_dialog_profiles_reset_text">reset</string>
    <string name="fragment_list_filter_dialog_order_manually_text">manually</string>
    <string name="fragment_list_filter_dialog_order_title_text">title</string>
    <string name="fragment_list_filter_dialog_order_created_text">created</string>
    <string name="fragment_list_filter_dialog_order_edited_text">edited</string>
    <string name="fragment_list_filter_dialog_order_viewed_text">viewed</string>
    <string name="fragment_list_filter_dialog_order_asc_text">ascending</string>
    <string name="fragment_list_filter_dialog_order_desc_text">descending</string>
    <string name="fragment_list_filter_dialog_profile_delete_text">Delete profile</string>
    <string name="fragment_list_filter_dialog_profile_input_text_title">Enter your title:</string>
    <string name="fragment_list_filter_dialog_profile_input_text_save_title">Save</string>
    <string name="fragment_list_filter_dialog_profile_input_text_cancel_title">Cancel</string>
    <string name="fragment_list_filter_dialog_profile_found_text">Found:</string>
    <string name="fragment_list_drag_drop_dialog_title">Drag &amp; Drop</string>
    <string name="fragment_list_drag_drop_dialog_message">To use the Drag&amp;Drop function, you must switch the filter and sorting profile into manual sort mode</string>
    <string name="fragment_list_drag_drop_dialog_button_ok">Switch</string>
    <string name="fragment_list_drag_drop_dialog_button_cancel">Cancel</string>
    <string name="fragment_user">Users</string>
    <string name="fragment_user_item_configure_button_description">Configure user</string>
    <string name="fragment_user_item_photo_description">Photo</string>
    <string name="fragment_user_preference">User preference</string>
    <string name="fragment_user_preference_category_name_title">Name</string>
    <string name="fragment_user_preference_first_name_title">First name</string>
    <string name="fragment_user_preference_last_name_title">Last name</string>
    <string name="fragment_user_preference_middle_name_title">Middle name</string>
    <string name="fragment_user_preference_category_additional_title">Additional</string>
    <string name="fragment_user_preference_email_title">Email</string>
    <string name="fragment_user_preference_description_title">Description</string>
    <string name="fragment_user_preference_category_identifiers_title">Identifiers</string>
    <string name="fragment_user_preference_user_id_title">User ID</string>
    <string name="fragment_user_preference_sync_id_title">Synchronization ID</string>
    <string name="fragment_user_preference_delete_dialog_title">Delete</string>
    <string name="fragment_user_preference_delete_dialog_message">Do you really want to delete this user?</string>
    <string name="fragment_user_preference_delete_dialog_button_ok">Delete</string>
    <string name="fragment_user_preference_delete_dialog_button_cancel">Cancel</string>
    <string name="fragment_user_preference_delete_default_error">Can\'t delete default profile</string>
    <string name="menu_user_preference_action_delete">Delete</string>
    <string name="activity_sync">Synchronization</string>
    <string name="activity_sync_conflicting_exists_notification_title_tv_text">Conflicting is exists, tap to check</string>
    <string name="menu_sync_action_synchronize">Synchronize</string>
    <string name="menu_sync_action_show_conflicted">Show conflicted</string>
    <string name="menu_sync_action_delete_all_from_server">Delete all from server</string>
    <string name="menu_sync_action_clear_journal">Clear journal</string>
    <string name="menu_sync_action_clear_journal_success">Sync journal cleared</string>
    <string name="menu_sync_action_clear_journal_failed">Sync journal clearing failed</string>
    <string name="activity_sync_item_status_prefix">Status</string>
    <string name="activity_sync_item_status_success">successfully</string>
    <string name="activity_sync_item_status_error">error</string>
    <string name="activity_sync_item_action_nothing">Error</string>
    <string name="activity_sync_item_action_add_to_server">Added to server</string>
    <string name="activity_sync_item_action_add_to_local">Added to local</string>
    <string name="activity_sync_item_action_delete_from_server">Deleted from server</string>
    <string name="activity_sync_item_action_delete_from_local">Deleted from local</string>
    <string name="activity_sync_item_action_delete_all_from_server_start">Deleting all from server start</string>
    <string name="activity_sync_item_action_delete_all_from_server_completed">Deleting all from server completed</string>
    <string name="fragment_settings_preference_category_sync_title">Synchronization</string>
    <string name="fragment_settings_preference_sync_wifi_title">Wi-fi</string>
    <string name="fragment_settings_preference_sync_wifi_summary">Synchronization wi-fi only</string>
    <string name="fragment_settings_preference_sync_api_url_title">Base API url</string>
    <string name="fragment_settings_preference_category_mock_entries_title">Mock entries</string>
    <string name="fragment_settings_preference_mock_entries_default_value_title">Default number</string>
    <string name="fragment_settings_preference_category_progress_notification_title">Progress notification</string>
    <string name="fragment_settings_preference_progress_notification_timer">Time to start, ms</string>
    <string name="menu_list_item_details_action_done">Save</string>
    <string name="menu_list_item_details_action_cancel">Cancel</string>
    <string name="menu_list_item_details_action_delete">Delete</string>
    <string name="menu_list_item_details_action_info">Info</string>
</resources>