<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Synchronize -->
    <item
        android:id="@+id/menu_sync_synchronize"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/menu_sync_action_synchronize"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>

    <!-- Show conflicted -->
    <item
        android:id="@+id/menu_sync_show_conflicting"
        android:icon="@drawable/ic_warning_white_24dp"
        android:title="@string/menu_sync_action_show_conflicted"
        android:orderInCategory="20"
        app:showAsAction="never"/>

    <!-- Delete all from Server -->
    <item
        android:id="@+id/menu_sync_delete_all_from_server"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/menu_sync_action_delete_all_from_server"
        android:orderInCategory="30"
        app:showAsAction="never"/>

    <!-- Clear journal -->
    <item
        android:id="@+id/menu_sync_clear_journal"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/menu_sync_action_clear_journal"
        android:orderInCategory="40"
        app:showAsAction="never"/>

</menu>