<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context="com.gamaliev.notes.color_picker.ColorPickerFragment">


    <!-- Favorite icons -->
    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_favorite_swipe"
        style="@style/ColorPickerHelperIcons"
        app:srcCompat="@drawable/ic_swap_horiz_black_36dp"
        android:contentDescription="@string/fragment_color_picker_ic_helper_swipe"
        android:layout_above="@+id/fragment_color_picker_scroll_favorite_bar"
        android:layout_marginEnd="@dimen/fragment_color_picker_image_ic_helper_favorite_swipe_margin"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_favorite_add"
        style="@style/ColorPickerHelperIcons"
        app:srcCompat="@drawable/ic_favorite_border_black_36dp"
        android:contentDescription="@string/fragment_color_picker_ic_helper_favorite"
        android:layout_alignTop="@+id/fragment_color_picker_image_ic_helper_favorite_swipe"
        android:layout_toStartOf="@+id/fragment_color_picker_image_ic_helper_favorite_swipe" />

    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_favorite_touch"
        style="@style/ColorPickerHelperIcons"
        android:contentDescription="@string/fragment_color_picker_ic_helper_touch"
        app:srcCompat="@drawable/ic_touch_app_black_36dp"
        android:layout_alignTop="@+id/fragment_color_picker_image_ic_helper_favorite_add"
        android:layout_toStartOf="@+id/fragment_color_picker_image_ic_helper_favorite_add" />


    <!-- Palette icons -->
    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_palette_swipe"
        style="@style/ColorPickerHelperIcons"
        android:contentDescription="@string/fragment_color_picker_ic_helper_swipe"
        app:srcCompat="@drawable/ic_swap_horiz_black_36dp"
        android:layout_below="@+id/fragment_color_picker_scroll_palette_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/fragment_color_picker_image_ic_helper_palette_swipe_margin"
        android:layout_marginEnd="@dimen/fragment_color_picker_image_ic_helper_palette_swipe_margin"/>

    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_palette_move"
        style="@style/ColorPickerHelperIcons"
        android:contentDescription="@string/fragment_color_picker_ic_helper_move"
        app:srcCompat="@drawable/ic_open_with_black_36dp"
        android:layout_alignTop="@+id/fragment_color_picker_image_ic_helper_palette_swipe"
        android:layout_toStartOf="@+id/fragment_color_picker_image_ic_helper_palette_swipe" />

    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_palette_touch"
        style="@style/ColorPickerHelperIcons"
        android:contentDescription="@string/fragment_color_picker_ic_helper_touch"
        app:srcCompat="@drawable/ic_touch_app_black_36dp"
        android:layout_alignTop="@+id/fragment_color_picker_image_ic_helper_palette_move"
        android:layout_toStartOf="@+id/fragment_color_picker_image_ic_helper_palette_move" />


    <!-- Palette bar -->
    <com.gamaliev.notes.common.custom_view.SwitchableHorizontalScrollView
        android:id="@+id/fragment_color_picker_scroll_palette_bar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/fragment_color_picker_scroll_palette_bar_elevation"
        android:background="@color/color_black"
        android:scrollbars="none"
        tools:targetApi="lollipop">

        <LinearLayout
            android:id="@+id/fragment_color_picker_ll_palette_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </com.gamaliev.notes.common.custom_view.SwitchableHorizontalScrollView>


    <!-- Favorite bar -->
    <HorizontalScrollView
        android:id="@+id/fragment_color_picker_scroll_favorite_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/fragment_color_picker_ll_favorite_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_color_picker_ll_favorite_bar_padding"
            android:orientation="horizontal"
            android:clipChildren="false"
            android:clipToPadding="false">
        </LinearLayout>

    </HorizontalScrollView>


    <!-- Result -->
    <FrameLayout
        android:id="@+id/fragment_color_picker_ff_result_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_color_picker_image_ic_helper_palette_swipe"
        android:layout_above="@id/fragment_color_picker_image_ic_helper_favorite_swipe">

        <FrameLayout
            android:id="@+id/fragment_color_picker_ff_result_outer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/fragment_color_picker_ff_result_outer_padding"
            android:paddingTop="@dimen/fragment_color_picker_ff_result_outer_padding"
            tools:ignore="UselessParent">

            <FrameLayout
                android:id="@+id/fragment_color_picker_ff_result_box"
                android:layout_width="@dimen/fragment_color_picker_ff_result_box_size"
                android:layout_height="@dimen/fragment_color_picker_ff_result_box_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fragment_color_picker_ff_result_box_margin"
                android:background="@color/color_picker_default"
                android:elevation="@dimen/fragment_color_picker_ff_result_box_elevation"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/fragment_color_picker_text_result_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/fragment_color_picker_text_result_box_size"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageView
                android:id="@+id/fragment_color_picker_ic_done"
                style="@style/ColorPickerActionIcons"
                android:contentDescription="@string/fragment_color_picker_ic_done_description"
                android:layout_marginBottom="@dimen/fragment_color_picker_ic_done_margin_bottom"
                app:srcCompat="@drawable/ic_done_black_48dp" />

            <ImageView
                android:id="@+id/fragment_color_picker_ic_cancel"
                style="@style/ColorPickerActionIcons"
                android:contentDescription="@string/fragment_color_picker_ic_cancel_description"
                android:layout_marginTop="@dimen/fragment_color_picker_ic_cancel_margin_top"
                app:srcCompat="@drawable/ic_clear_black_48dp"/>

        </FrameLayout>

    </FrameLayout>

</RelativeLayout>
